--- a/suprise.html
+++ b/suprise.html
@@ -156,7 +156,7 @@ function loadImages(callback) {
 
   baseTypes.forEach(type => {
     shapes.forEach(shape => {
-      allPaths.push(`${type}_${shape}.svg`);
+      allPaths.push(`${type}_${shape}.png`);
     });
   });
 
