updating suprise page

--- a/suprise.html
+++ b/suprise.html
@@ -147,8 +147,24 @@ function loadImages(callback) {
   ];
 
   const extras = [
-    'goal.svg'
-    // add 'player_idle_down_0.png', etc. here if you want them auto-loaded too
+    // Game objects
+    'goal.svg',
+
+    // Player idle frames
+    'player_idle_down_0.png',
+    'player_idle_up_0.png',
+    'player_idle_left_0.png',
+    'player_idle_right_0.png',
+
+    // Player walking frames
+    'player_walk_down_0.png',
+    'player_walk_down_1.png',
+    'player_walk_up_0.png',
+    'player_walk_up_1.png',
+    'player_walk_left_0.png',
+    'player_walk_left_1.png',
+    'player_walk_right_0.png',
+    'player_walk_right_1.png'
   ];
 
   // Build file list
