--- a/suprise.html
+++ b/suprise.html
@@ -1,7 +1,7 @@
 ---
 title: Surprise
-layout: default
 ---
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -196,8 +196,6 @@ function loadImages(callback) {
   window.images = images;
 }
 
-const images = {};
-
 // --- Build wall sprite map with random wall types ---
 const wallSprites = Array.from({ length: rows }, () =>
   Array.from({ length: cols }, () => '')
@@ -232,7 +230,7 @@ function animatePlayer() {
   player.frameTimer++;
   if (player.frameTimer >= player.frameInterval) {
     player.frameTimer = 0;
-    player.frame = (player.frame + 1) % 4;
+    player.frame = (player.frame + 1) % player.frame % frames.length;
   }
 }
 
@@ -284,19 +282,14 @@ function drawMaze() {
   const offsetX = -camera.x + startCol * tileSize;
   const offsetY = -camera.y + startRow * tileSize;
 
+  const drawX = (x - startCol) * tileSize + offsetX;
+  const drawY = (y - startRow) * tileSize + offsetY;
+
   for (let y = startRow; y < endRow; y++) {
     for (let x = startCol; x < endCol; x++) {
-      if (maze[y][x] === 1) {
-        ctx.drawImage(images[wallSprites[y][x]], drawX, drawY, tileSize, tileSize);
-      }
-      else {
-        for (let y = 0; y < maze.length; y++) {
-          for (let x = 0; x < maze[0].length; x++) {
-            if (maze[y][x] === 1) {
-              wallSprites[y][x] = getWallSprite(x, y, maze);
-            }
-          }
-        };
+      const key = wallSprites[y]?.[x];
+      if (key && images[key]) {
+        ctx.drawImage(images[key], drawX, drawY, tileSize, tileSize);
       }
     }
   }
@@ -402,6 +395,18 @@ function gameLoop() {
 }
 
 loadImages(() => {
+  // === Define player animations here ===
+  player.animations = {
+    idleUp:    [images.player_idle_up_0],
+    idleDown:  [images.player_idle_down_0],
+    idleLeft:  [images.player_idle_left_0],
+    idleRight: [images.player_idle_right_0],
+
+    walkUp:    [images.player_walk_up_0, images.player_walk_up_1],
+    walkDown:  [images.player_walk_down_0, images.player_walk_down_1],
+    walkLeft:  [images.player_walk_left_0, images.player_walk_left_1],
+    walkRight: [images.player_walk_right_0, images.player_walk_right_1]
+  };
   drawMaze();
   gameLoop();
 });
