updating suprise page

--- a/suprise.html
+++ b/suprise.html
@@ -418,7 +418,7 @@ loadImages(() => {
     walkRight: [images.player_walk_right_0, images.player_walk_right_1]
   };
   drawMaze();
-  gameLoop();
+  // gameLoop();
 });
 
 </script>
