updating suprise page

--- a/suprise.html
+++ b/suprise.html
@@ -89,26 +89,26 @@ const viewCols = viewWidth / tileSize;
 const viewRows = viewHeight / tileSize;
 
 const maze = [
-  [2,2,2,2,1,2,1,1,1,2,2,2,2,1,2,1,1,1,2,2],
-  [1,0,0,0,0,0,0,1,0,0,0,0,0,2,0,0,0,0,0,2],
-  [2,0,2,1,2,0,1,2,1,2,0,2,0,1,2,1,2,0,2,2],
-  [1,0,2,0,0,0,0,0,0,2,0,0,0,0,0,1,0,0,0,2],
-  [2,0,1,0,2,2,2,2,0,2,2,2,2,2,0,2,2,1,0,2],
-  [2,0,0,0,0,0,0,1,0,0,0,0,1,1,0,1,0,0,0,1],
-  [1,2,1,1,2,2,0,2,0,2,2,0,2,0,0,1,0,2,0,1],
-  [2,0,0,0,0,1,0,0,0,2,0,0,0,0,0,0,0,1,0,2],
-  [1,0,2,1,0,0,0,2,0,1,2,2,0,2,2,0,0,2,0,2],
-  [2,0,0,0,0,1,0,2,0,0,0,2,0,0,0,1,0,0,0,1],
-  [2,1,2,2,0,1,0,2,2,1,0,2,1,2,0,2,1,2,0,1],
-  [1,0,0,0,0,0,0,0,0,0,0,1,0,2,0,0,0,1,0,2],
-  [2,0,2,2,1,1,2,1,1,2,0,2,0,2,2,1,0,2,0,2],
-  [1,0,0,0,0,0,0,2,0,0,0,2,0,0,0,1,0,0,0,2],
-  [2,1,0,1,2,1,0,1,2,2,0,2,2,1,0,2,2,0,2,1],
+  [1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1],
+  [1,0,0,0,0,0,0,1,0,0,0,0,0,1,0,0,0,0,0,1],
+  [1,0,1,1,1,0,1,1,1,1,0,1,0,1,1,1,1,0,1,1],
+  [1,0,1,0,0,0,0,0,0,1,0,0,0,0,0,1,0,0,0,1],
+  [1,0,1,0,1,1,1,1,0,1,1,1,1,1,0,1,1,1,0,1],
+  [1,0,0,0,0,0,0,1,0,0,0,0,1,1,0,1,0,0,0,1],
+  [1,1,1,1,1,1,0,1,0,1,1,0,1,0,0,1,0,1,0,1],
+  [1,0,0,0,0,1,0,0,0,1,0,0,0,0,0,0,0,1,0,1],
+  [1,0,1,1,0,0,0,1,0,1,1,1,0,1,1,0,0,1,0,1],
+  [1,0,0,0,0,1,0,1,0,0,0,1,0,0,0,1,0,0,0,1],
+  [1,1,1,1,0,1,0,1,1,1,0,1,1,1,0,1,1,1,0,1],
+  [1,0,0,0,0,0,0,0,0,0,0,1,0,1,0,0,0,1,0,1],
+  [1,0,1,1,1,1,1,1,1,1,0,1,0,1,1,1,0,1,0,1],
+  [1,0,0,0,0,0,0,1,0,0,0,1,0,0,0,1,0,0,0,1],
+  [1,1,0,1,1,1,0,1,1,1,0,1,1,1,0,1,1,0,1,1],
   [1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1],
-  [2,0,2,2,1,1,2,2,1,2,2,2,1,2,2,2,2,2,0,2],
-  [1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2],
-  [1,0,0,0,2,1,2,1,1,2,2,1,1,2,1,2,2,1,0,2],
-  [2,2,2,1,2,1,2,2,1,1,2,1,2,2,2,1,2,2,1,1]
+  [1,0,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,0,1],
+  [1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1],
+  [1,0,0,0,1,1,1,1,1,1,1,1,1,1,1,1,1,1,0,1],
+  [1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1]
 ];
 
 const rows = maze.length;
@@ -405,6 +405,7 @@ loadImages(() => {
   //  walkLeft:  [images.player_walk_left_0, images.player_walk_left_1],
   //  walkRight: [images.player_walk_right_0, images.player_walk_right_1]
   //};
+  console.log("All images loaded!");
   drawMaze();
   // gameLoop();
 });
