updating suprise page

--- a/suprise.html
+++ b/suprise.html
@@ -405,8 +405,9 @@ loadImages(() => {
   //  walkLeft:  [images.player_walk_left_0, images.player_walk_left_1],
   //  walkRight: [images.player_walk_right_0, images.player_walk_right_1]
   //};
-  console.log("All images loaded!");
+  console.log("All images loaded.");
   drawMaze();
+  console.log("Maze drawn.");
   // gameLoop();
 });
 
