updating suprise page

--- a/suprise.html
+++ b/suprise.html
@@ -421,9 +421,8 @@ loadImages(() => {
   
   console.log("Player animations assigned.");
   drawMaze();
-  drawPlayer();
   console.log("Player drawn.");
-  //gameLoop();
+  gameLoop();
 });
 
 </script>
