--- a/suprise.html
+++ b/suprise.html
@@ -190,24 +190,12 @@ function loadImages(callback) {
   allPaths.forEach(name => {
     const img = new Image();
     img.src = `/images/${name}`;
-
-    const key = name.replace(/\.(svg|png)$/i, ''); // e.g. tree_corner_rd
-    images[key] = img;
-
-    console.log("Assigning image:", name, "→ key:", key);
-
     img.onload = () => {
       loaded++;
-      console.log("Loaded:", name, `(${loaded}/${total})`);
-      if (loaded === total) {
-        console.log("All images loaded successfully.");
-        callback();
-      }
+      if (loaded === total) callback();
     };
-
-    img.onerror = () => {
-      console.error("Failed to load image:", name);
-    };
+    const key = name.replace(/\.(svg|png)$/i, ''); // e.g. tree_corner_rd
+    images[key] = img;
   });
 
   // expose images globally so drawMaze can use it
