updating suprise page

--- a/suprise.html
+++ b/suprise.html
@@ -432,7 +432,7 @@ loadImages(() => {
   drawMaze();
   drawPlayer();
   console.log("Player drawn.");
-  gameLoop();
+  //gameLoop();
 });
 
 </script>
