updating suprise page

--- a/suprise.html
+++ b/suprise.html
@@ -162,6 +162,10 @@ function loadImages(callback) {
     'player_idle_up_0.png',
     'player_idle_left_0.png',
     'player_idle_right_0.png',
+    'player_idle_down_1.png',
+    'player_idle_up_1.png',
+    'player_idle_left_1.png',
+    'player_idle_right_1.png',
     // Player walking frames
     'player_walk_down_0.png',
     'player_walk_down_1.png',
